--- a/themes/morg/motiwi/css/application.css
+++ b/themes/morg/motiwi/css/application.css
@@ -6,7 +6,6 @@
 
 html body {
   color: #444444;
-  font-family: "Source Sans Pro", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
   font-size: 18px;
   font-weight: 300;
   line-height: 1.6em;
@@ -173,10 +172,6 @@ h1 {
   transition: all 0.25s ease-out;
 }
 
-.tw-tidder-controls button {
-  
-}
-
 .tw-tiddler-controls button,
 .tw-page-controls button,
 .tw-page-controls a {
@@ -189,9 +184,7 @@ h1 {
 .tw-tiddler-controls button i.icon,
 .tw-page-controls button i.icon,
 .tw-page-controls a i.icon {
-  border: 3px solid #444444;
   margin: 0px;
-  color: #444444;
   font-size: 2.4em;
   text-decoration: none;
   border-radius: 200px;
@@ -264,7 +257,8 @@ svg.tw-image-done-button:hover {
  */
 
 #search {
-  padding: 85px 0;
+  margin: 0px 0px 75px 0px;
+  padding: 164px 0px 150px 0px;
   position: relative;
   text-align: center;
 }
@@ -273,13 +267,25 @@ svg.tw-image-done-button:hover {
   font-weight: 200;
 }
 
+#search .tw-reveal-open {
+  display: block !important; /* "!important" overrides inline styles */
+  width: 400px;
+  margin: 0px auto;
+  position: relative;
+}
+
 .ui.search {
   display: inline-block;
   width: 500px;
 }
 
 .search-results {
-  width: 400px;
+  width: 100%;
+  background: #ffffff;
+  font-size: 16px;
+  top: -1px;
+  left: 0px;
+  position: absolute;
   margin: 0px auto;
   border: 1px solid rgba(0, 0, 0, 0.15);
   border-top: none;
@@ -309,11 +315,12 @@ svg.tw-image-done-button:hover {
 }
 
 /**
- * Main menu
+ * Navigation Bar
  */
 
 .main.menu {
   top: 0;
+  box-shadow: 0px 0px 0px 1px rgba(0, 0, 0, 0.15);
 }
 
 .main.menu a {
@@ -324,18 +331,17 @@ svg.tw-image-done-button:hover {
   z-index: 10000;
 }
 
-.ui.item {
-  cursor: pointer;
-}
-
 .ui.main.menu .tw-button {
   border: none;
   background: transparent;
+  cursor: pointer;
   font-size: 1em;
   margin: -3px -3px 0px -3px;
   padding: 0;
 }
 
+.ui.main.menu a.item,
+.ui.main.menu .tw-button,
 .ui.main.menu .tw-button i.icon {
   background: transparent;
 }
@@ -348,12 +354,28 @@ svg.tw-image-done-button:hover {
   text-decoration: none;
 }
 
-.ui.menu .item.icon a i {
+.ui.main.menu .item i.icon {
+  background: transparent;
+  cursor: pointer;
+  color: #000;
+}
+
+.ui.menu .right.menu a:hover {
   background: transparent;
 }
 
+.ui.menu .title {
+  font-weight: 700;
+  text-transform: uppercase;
+}
+
+.ui.menu .subtitle {
+  font-size: 14px;
+  font-weight: 700;
+}
+
 /**
- * Sidebar
+ * Side Bar
  */
 
 .launch.button {
@@ -361,6 +383,12 @@ svg.tw-image-done-button:hover {
   top: 63px;
   z-index: 500;
   width: 70px;
+}
+
+.ui.menu.sidebar .item.title {
+  opacity: 0.75;
+  text-align: center;
+  padding: 30px 0 23px;
 }
 
 /**
@@ -762,4 +790,9 @@ i.icon {
 
 td.term {
   text-align: right;
+}
+
+body .ui.menu .item:before,
+body .ui.vertical.menu .item:before {
+  background: none;
 }
